Create Parent Directory if Required

--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_wallet.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_wallet.yml
@@ -1,3 +1,8 @@
+- name: Create SSL Wallet Parent Directory
+  file:
+    path: "{{ wallet_directory | dirname }}"
+    state: directory
+
 - name: Create SSL Wallet Directory
   file:
     path: "{{ wallet_directory }}"
