Trailing slash required

--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_wallet.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_wallet.yml
@@ -42,7 +42,7 @@
      - name: Fetch PKCS#12 File onto Ansible Controller
        fetch:
           src: "{{ wallet_directory }}/openssl.p12"
-          dest: /tmp
+          dest: /tmp/
           flat: true
        when: database_primary_sid is defined
        register: fetch_pkcs12
