--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -278,6 +278,26 @@
           script: check_available_restore_points.sh
           environment:
             RESTORE_POINT_NAME: "{{ restore_point_name | upper }}"
+          changed_when: false
+
+        - name: Calculate Final Audited Interaction Checksum
+          script: ../../common/files/calculate_audited_interaction_checksum.sh
+          when:
+            - target_dbs | regex_search('delius_dbs')
+            - database_primary_sid is defined
+
+        # Include role inside a block so that it may be delegated
+        - name: Stop Audited Interaction Replication
+          when:
+            - target_dbs | regex_search('delius_dbs')
+            - database_primary_sid is defined
+          delegate_to: localhost
+          become: no
+          block:
+            - include_role:
+                name: oracle_audit_replication_management
+              vars:
+                replication_action: stop
 
         - name: Flashback Standby DBs to Restore Point
           include_tasks: flashback_standby_restore_points.yml
@@ -351,6 +371,34 @@
           wait_for:
             timeout: 120
 
+        - name: Restart Audited Interaction Replication for Delius
+          when:
+            - target_dbs | regex_search('delius_dbs')
+            - database_primary_sid is defined
+          block:
+            - name: Get Database Startup SCN
+              script: ../../common/files/get_db_startup_scn.sh
+              register: get_db_startup_scn
+              changed_when: false
+
+            - name: Show Database Startup SCN
+              debug:
+                msg: "Restarting Audit Replication from SCN {{ get_db_startup_scn.stdout | trim }}"
+
+            # Include role inside a block so that it may be delegated
+            - name: Restart Audited Interaction Replication
+              when:
+                - target_dbs | regex_search('delius_dbs')
+                - database_primary_sid is defined
+              delegate_to: localhost
+              become: no
+              block:
+                - include_role:
+                    name: oracle_audit_replication_management
+                  vars:
+                    replication_action: restart
+                    audit_cdc_scn: "{{ get_db_startup_scn.stdout | trim }}"
+
 # If this an AWS Environment then we will run password rotation - check if this is the case
 - name: Set Inside AWS for Password Rotation
   hosts: "{{ target_dbs  }}"
@@ -379,6 +427,7 @@
   vars:
     rotate_database_passwords: true
     rotate_groups: "{{ target_dbs }}"
+    unlock_system_passwords: yes
     sync_monitoring_passwords_nonoem: true
   when:
     - required_action == "Flashback to Restore Point"
