--- a/.github/workflows/oracle-db-ssl-wallet.yml
+++ b/.github/workflows/oracle-db-ssl-wallet.yml
@@ -23,10 +23,7 @@ on:
         required: true
         type: choice
         options: 
-          - "delius_primarydb"
-          - "mis_primarydb"
-          - "boe_primarydb"
-          - "dsd_primarydb"   
+          - "delius_dbs"
       SourceCodeVersion:
         description: "Source version for the  hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
