--- a/playbooks/oracle_duplicate/rman-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-duplicate.yml
@@ -104,13 +104,18 @@
 
     - name: Set spfile parameters when variable is not null
       set_fact:
-        spfile_parameters_option: "-f {% for item in database_parameters | dict2items %}{{ item.key}}='{{ item.value }}'\n{% endfor %} "
+        spfile_parameters_option: "{% for item in database_parameters | dict2items %}{{ item.key }}='{{ item.value }}'\n{% endfor %}"
       when: database_parameters is defined
 
     - name: Set local disk backup flag if s3 Bucket is set to NONE
       set_fact:
         local_disk_backup: "-l"
       when: s3_source_bucket == 'NONE'
+
+    - name: Set No-Op mode flag is noop_mode is set to true
+      set_fact:
+         noop_flag: "-n"
+      when: noop_mode | default(false)
 
     - name: Set catalog schema name
       set_fact:
@@ -138,7 +143,7 @@
 
         - name: Generate Command to Run RMAN Script
           set_fact:
-            run_rman_script: '/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c "{{ catalog }}" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} "{{ spfile_parameters_option|default()|trim }}" {{ repository_dispatch_flag|default() }}'
+            run_rman_script: '/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c "{{ catalog }}" {{ local_disk_backup | default() }} {{ noop_flag | default() }} {{ rman_datetime_option | default() }} {{ "-f" if ((ssm_parameter_option | default("") | length) > 0) else "" }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} "{{ spfile_parameters_option|default()|trim }}" {{ repository_dispatch_flag|default() }}'
 
         - name: Show Script to Run
           debug:
