--- a/docker/delius-ansible-aws/.trivyignore
+++ b/docker/delius-ansible-aws/.trivyignore
@@ -19,3 +19,5 @@ CVE-2022-40898
 #       - usr/local/lib/python3.12/site-packages/ansible_collections/kaytus/ksmanage/venv/Lib/site-packages/wheel-0.36.2.dist-info/METADATA
 #       - usr/local/lib/python3.12/site-packages/ansible_collections/inspur/ispim/venv/Lib/site-packages/wheel-0.36.2.dist-info/METADATA
 
+# open issue https://github.com/mikefarah/yq/issues/2151
+CVE-2024-34156
