--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/upload_certificate.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/upload_certificate.yml
@@ -108,7 +108,7 @@
 
             - name: Get List of End Points for this Environment
               shell: |
-                aws dms describe-endpoints --query "Endpoints[?EngineName=='oracle' && (starts_with(EndpointIdentifier,'{{ simple_environment_name }}-audit-data-from') || starts_with(EndpointIdentifier,'{{ simple_environment_name }}-user-data-to'))].EndpointArn" --output text --region {{ region }} | sed 's/\t/\n/g'
+                aws dms describe-endpoints --query "Endpoints[?EngineName=='oracle' && (starts_with(EndpointIdentifier,'{{ simple_environment_name }}-audit-data-') || starts_with(EndpointIdentifier,'{{ simple_environment_name }}-user-data-'))].EndpointArn" --output text --region {{ region }} | sed 's/\t/\n/g'
               register: get_environment_endpoints
               changed_when: false
 
