--- a/playbooks/delius_gdpr/playbook.yml
+++ b/playbooks/delius_gdpr/playbook.yml
@@ -3,10 +3,8 @@
   shell: |
     export PATH=$PATH:/usr/local/bin
     INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
-    ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
     DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
-    APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text | sed 's/-core//')
-    aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-application-passwords --region {{ region }} --query SecretString --output text| jq -r .gdpr_pool
+    aws secretsmanager get-secret-value --secret-id delius-core-${DELIUS_ENVIRONMENT}-oracle-db-application-passwords --region {{ region }} --query SecretString --output text| jq -r .gdpr_pool
   register: gdpr_pool_password
   changed_when: false
   no_log: true
