Use already fetched slack token from AWS Secrets

--- a/playbooks/oracle_duplicate/update-nd-parameters.yml
+++ b/playbooks/oracle_duplicate/update-nd-parameters.yml
@@ -6,10 +6,6 @@
   become_user: oracle
 
   tasks:
-    - name: Get Slack Token
-      shell: aws ssm get-parameter --name manual-ops-alerts-slack-token --region {{ region }} --output text --with-decryption --query Parameter.Value || aws ssm get-parameter --name /alfresco/slack/token --region {{ region }} --output text --with-decryption --query Parameter.Value
-      register: getslacktoken
-      changed_when: false
 
     - block:
         - name: Set ND Parameters
@@ -19,7 +15,7 @@
       rescue:
         - name: Send error notification message via Slack
           community.general.slack:
-            token: "{{ getslacktoken.stdout }}"
+            token: "{{ slack_token }}"
             msg: "Update ND Parameters failed.  Ignoring errors and continuing with duplication tasks."
             channel: "#delius-aws-oracle-dev-alerts"
             username: "Delius Database Duplicate on {{ inventory_hostname }}"
